--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,111 +1,82 @@
 *{
    margin: 0;
    padding: 0;
+   box-sizing: border-box;
    font-family: sans-serif; 
 }
-.logo img{
-    height: 130px;
-    width: 130px;
-    border-radius: 50%;
-    box-shadow: 0 0 20px 9px #ff61241f;
-}
-.logo{
-    text-align: center;
-}
-.banner{
-    height: 100%;
+section{
+    position: relative;
     width: 100%;
-    background-color:white;
-    background-position: center;
-    background-size: cover;
+    height: 100vh;
+    display: flex;
+}
+section .imgBx{
+    position: relative;
+    width: 50%;
+    height: 100%;
+}
+section .imgBx img{
     position: absolute;
-}
-.form{
-    width: 380px;
-    height: 490px;
-    position: relative;
-    margin: 6% auto;
-    padding: 5px;
-    background-color: white;
-    overflow: hidden;
-    box-shadow: 0 0 20px 9px #ff61241f;
-}
-.button-box{
-    width: 220px;
-    margin: 5px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #ff61241f;
-    border-radius: 30px;
-}
-.toggle-btn{
-    padding: 10px 30px;
-    cursor: pointer;
-    background: transparent;
-    border: 0;
-    outline: none;
-    position: relative;
-}
-#btn{
     top: 0;
     left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right, #ff105f,#ffad06);
-    border-radius: 30px;
-    transition: .5s;
-}
-.input-group{
-    top: 250px;
-    position: absolute;
-    width: 280px;
-    transition: .5s;
-    overflow: hidden;
-}
-.input-feild{
     width: 100%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom:1px solid #999;
-    outline: none;
-    background: transparent;
+    height: 100%;
 }
-.submit-btn{
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: auto;
-    background: linear-gradient(to right, #ff105f,#ffad06);
-    border: 0;
+section .contentBx{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+section .contentBx .formBx h2{
+    color: #607d8b;
+    font-weight: 600;
+    font-size: 1.5em;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    border-bottom: 4px solid #ff4584;
+    display: inline-block;
+    letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx{
+    margin-bottom: 20px;
+}
+section .contentBx .formBx .inputBx span{
+    font-size: 16px;
+    margin-bottom: 5px;
+    display: inline-block;
+    color: #607d8b;
+    font-weight: 300;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+section .contentBx .formBx .inputBx input{
+    width: 100%;
+    padding: 10px 20px;
     outline: none;
+    font-weight: 400;
+    border: 1px solid #607d8b;
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #607d8b;
+    background: transparent;
     border-radius: 30px;
 }
-.check-box{
-    margin: 30px 10px 30px 0;
+section .contentBx .formBx .inputBx input[type="submit"]{
+    background: #ff4584;
+     color: #fff;
+     outline: none;
+     border: none;
+     font-weight: 500;
+     cursor: pointer;
 }
-span{
-    color: #777;
-    font-size: 12px;
-    bottom: 68px;
-    position: absolute;
+section .contentBx .formBx .inputBx input[type="submit"]:hover{
+    background: #f53677;
 }
-.social-icons{
-    margin: 30px auto;
-    text-align: center;
-}
-.social-icons img{
-    width: 30px;
-    margin: 0 12px;
-    box-shadow: 0 0 20px 0 #7f7f7f3d;
-    border-radius: 50%;
-}
-#login{
-    left: 50px;
-}
-#register{
-    left: 450px;
+section .contentBx .formBx .remember{
+    margin-bottom: 10px;
+    color: #607d8b;
+    font-weight: 400;
+    font-size: 14px;
 }
