--- a/CSS/style.css
+++ b/CSS/style.css
@@ -12,8 +12,8 @@ section{
 }
 section .imgBx{
     position: relative;
-    width: 50%;
-    height: 100%;
+    width: 40%;
+    height: 90%;
 }
 section .imgBx img{
     position: absolute;
@@ -79,4 +79,24 @@ section .contentBx .formBx .remember{
     color: #607d8b;
     font-weight: 400;
     font-size: 14px;
+}
+hr{
+    margin-top: 30px;
+    width: 90%;
+}
+.or{
+    background: #fff;
+    width: 30px;
+    margin: 10px auto;
+}
+section .contentBx .formBx .inputBx input[type="button"]{
+    background: #ff4584;
+     color: #fff;
+     outline: none;
+     border: none;
+     font-weight: 500;
+     cursor: pointer;
+}
+section .contentBx .formBx .inputBx input[type="button"]:hover{
+    background: #f53677;
 }
