--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,102 +1,234 @@
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: sans-serif; 
+body {
+  font-family: 'Montserrat', sans-serif;
+  background: white;
 }
-section{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
+
+.container {
+  display: block;
+  max-width: 680px;
+  width: 80%;
+  margin: 50px auto;
 }
-section .imgBx{
-    position: relative;
-    width: 40%;
-    height: 90%;
+img{
+  height: 10%;
+  width: 40%;
 }
-section .imgBx img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.links {
+  list-style-type: none;
 }
-section .contentBx{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
+
+.links li {
+  display: inline-block;
+  margin: 0 20px 0 0;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
 }
-section .contentBx .formBx h2{
-    color: #607d8b;
-    font-weight: 600;
-    font-size: 1.5em;
-    text-transform: uppercase;
-    margin-bottom: 20px;
-    border-bottom: 4px solid #ff4584;
-    display: inline-block;
-    letter-spacing: 1px;
+
+.links li:nth-child(2) {
+  opacity: .6;
 }
-section .contentBx .formBx .inputBx{
-    margin-bottom: 20px;
+
+.links li:nth-child(2):hover {
+  opacity: 1;
 }
-section .contentBx .formBx .inputBx span{
-    font-size: 16px;
-    margin-bottom: 5px;
-    display: inline-block;
-    color: #607d8b;
-    font-weight: 300;
-    font-size: 16px;
-    letter-spacing: 1px;
+
+.links li:nth-child(3) {
+  opacity: .6;
+  float: right;
 }
-section .contentBx .formBx .inputBx input{
-    width: 100%;
-    padding: 10px 20px;
-    outline: none;
-    font-weight: 400;
-    border: 1px solid #607d8b;
-    font-size: 16px;
-    letter-spacing: 1px;
-    color: #607d8b;
-    background: transparent;
-    border-radius: 30px;
+
+.links li:nth-child(3):hover {
+  opacity: 1;
 }
-section .contentBx .formBx .inputBx input[type="submit"]{
-    background: #ff4584;
-     color: #fff;
-     outline: none;
-     border: none;
-     font-weight: 500;
-     cursor: pointer;
+
+.links li a {
+  text-decoration: none;
+  color: #0f132a;
+  font-weight: bolder;
+  text-align: center;
+  cursor: pointer;
 }
-section .contentBx .formBx .inputBx input[type="submit"]:hover{
-    background: #f53677;
+
+form {
+  width: 100%;
+  max-width: 680px;
+  margin: 40px auto 10px;
 }
-section .contentBx .formBx .remember{
-    margin-bottom: 10px;
-    color: #607d8b;
-    font-weight: 400;
-    font-size: 14px;
+
+form .input__block {
+  margin: 20px auto;
+  display: block;
+  position: relative;
 }
-hr{
-    margin-top: 30px;
-    width: 90%;
+
+form .input__block.first-input__block::before {
+  content: "";
+  position: absolute;
+  top: -15px;
+  left: 50px;
+  display: block;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid rgba(15, 19, 42, 0.1);
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
 }
-.or{
-    background: #fff;
-    width: 30px;
-    margin: 10px auto;
+
+form .input__block.signup-input__block::before {
+  content: "";
+  position: absolute;
+  top: -15px;
+  left: 150px;
+  display: block;
+  width: 0;
+  height: 0;
+  background: transparent;
+  border-left: 15px solid transparent;
+  border-right: 15px solid transparent;
+  border-bottom: 15px solid rgba(15, 19, 42, 0.1);
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
 }
-section .contentBx .formBx .inputBx input[type="button"]{
-    background: #ff4584;
-     color: #fff;
-     outline: none;
-     border: none;
-     font-weight: 500;
-     cursor: pointer;
+
+form .input__block input {
+  display: block;
+  width: 90%;
+  max-width: 680px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 8px;
+  border: none;
+  background: rgba(15, 19, 42, 0.1);
+  color: rgba(15, 19, 42, 0.3);
+  padding: 0 0 0 15px;
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
 }
-section .contentBx .formBx .inputBx input[type="button"]:hover{
-    background: #f53677;
+
+form .input__block input:focus, form .input__block input:active {
+  outline: none;
+  border: none;
+  color: #0f132a;
 }
+
+form .input__block input.repeat__password {
+  opacity: 0;
+  display: none;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+form .signin__btn {
+  background: #e91e63;
+  color: white;
+  display: block;
+  width: 92.5%;
+  max-width: 680px;
+  height: 50px;
+  border-radius: 8px;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  -webkit-box-shadow: 0 15px 30px rgba(233, 30, 99, 0.36);
+          box-shadow: 0 15px 30px rgba(233, 30, 99, 0.36);
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+form .signin__btn:hover {
+  -webkit-box-shadow: 0 0 0 rgba(233, 30, 99, 0);
+          box-shadow: 0 0 0 rgba(233, 30, 99, 0);
+}
+
+.separator {
+  display: block;
+  margin: 30px auto 10px;
+  text-align: center;
+  height: 40px;
+  position: relative;
+  background: transparent;
+  color: rgba(15, 19, 42, 0.4);
+  font-size: 13px;
+  width: 90%;
+  max-width: 680px;
+}
+
+.separator::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 0;
+  background: rgba(15, 19, 42, 0.2);
+  height: 1px;
+  width: 45%;
+}
+
+.separator::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  right: 0;
+  background: rgba(15, 19, 42, 0.2);
+  height: 1px;
+  width: 45%;
+}
+
+.google__btn
+ {
+  display: block;
+  width: 90%;
+  max-width: 680px;
+  margin: 20px auto;
+  height: 50px;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 8px;
+  border: none;
+  line-height: 40px;
+}
+
+.google__btn.google__btn
+ {
+  background: #5b90f0;
+  color: white;
+  -webkit-box-shadow: 0 15px 30px rgba(91, 144, 240, 0.36);
+          box-shadow: 0 15px 30px rgba(91, 144, 240, 0.36);
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+.google__btn.google__btn .fa {
+  font-size: 20px;
+  padding: 0 5px 0 0;
+}
+
+.google__btn.google__btn:hover {
+  -webkit-box-shadow: 0 0 0 rgba(91, 144, 240, 0);
+          box-shadow: 0 0 0 rgba(91, 144, 240, 0);
+}
+
+.google__btn.github__btn {
+  background: #25282d;
+  color: white;
+  -webkit-box-shadow: 0 15px 30px rgba(37, 40, 45, 0.36);
+          box-shadow: 0 15px 30px rgba(37, 40, 45, 0.36);
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+
+.google__btn.github__btn .fa {
+  font-size: 20px;
+  padding: 0 5px 0 0;
+}
+
+.google__btn.github__btn:hover {
+  -webkit-box-shadow: 0 0 0 rgba(37, 40, 45, 0);
+          box-shadow: 0 0 0 rgba(37, 40, 45, 0);
+}
+/*# sourceMappingURL=style.css.map */
