--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -1,78 +1,73 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif; 
- }
- h1,h3{
-     text-align: center;
-     font-weight: bold;
-     margin: 20px auto;
- }
- .input-feild{
-    width: 50%;
-    padding: 10px 0;
-    margin: 5px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom:1px solid #999;
-    outline: none;
-    background: transparent;
-}
-.l1{
-    font-weight: 700;
-}
-.input-area{
-    margin-top: 30px;
-    padding: 10px 0;
-    width: 50%;
-    border-left: 1px solid #999;
-    border-top: 1px solid #999;
-    border-right: 1px solid #999;
-    border-bottom:1px solid #999;
-    outline: none;
-    background: transparent;   
-}
-.input-drop{
-    margin-top: 30px;
-    padding: 10px 0;
-    width: 20%;
-    border-left: 1px solid #999;
-    border-top: 1px solid #999;
-    border-right: 1px solid #999;
-    border-bottom:1px solid #999;
-    outline: none;
-    background: transparent;   
-
-}
-.check-box{
-    margin: 20px 10px 20px 0;
-}
-span{
-    color: #777;
-    font-size: 12px;
-    bottom: 68px;
-}
-.Product-detail{
-    top: 20px;
-    width: 100%;
-    transition: .5s;
-    overflow: hidden;
-    text-align: center;
-}
-.submit-btn{
-    width: 85%;
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: 10px auto;
-    background: linear-gradient(to right, #ff105f,#ffad06);
-    border: 0;
-    outline: none;
-    border-radius: 30px;
-}
-hr{
- margin-top: 10px;
- margin-bottom: 10px;
- border: 1px solid gray;
-}
+.input{
+    font-size:14px;
+    background:white;
+    border-radius:50px;
+    width:350px;
+    outline:none;
+  }
+  ::-webkit-file-upload-button{
+    color:white;
+    background:#206a5d;
+    padding:10px;
+    border:none;
+    border-radius:50px;
+    outline:none;
+  }
+  .input-feild{
+      width: 50%;
+      padding: 10px ;
+      margin: 5px 0;
+      border-radius:50px;
+      border: 1px solid #999;
+      outline:none;
+  }
+  .input-area{
+      margin-top: 30px;
+      padding: 10px;
+      width: 50%;
+      border-left: 1px solid #999;
+      border-top: 1px solid #999;
+      border-right: 1px solid #999;
+      border-bottom:1px solid #999;
+      outline: none;
+    border-radius:50px;
+  }
+  .input-drop{
+      margin: 30px auto;
+      padding: 10px 0;
+      width: 20%;
+      border-left: 1px solid #999;
+      border-top: 1px solid #999;
+      border-right: 1px solid #999;
+      border-bottom:1px solid #999;
+      outline: none;
+      background: transparent;   
+     border-radius:50px;
+  }
+  .check-box{
+      margin: 20px 10px 20px 0;
+  }
+  span{
+      color: #777;
+      font-size: 12px;
+      bottom: 68px;
+  }
+  .Product-detail{
+      top: 20px;
+      width: 100%;
+      transition: .5s;
+      overflow: hidden;
+    margin:auto 20%;
+  }
+  h3{
+    font-weight:700;
+    font-size:20px;
+    color:#feca57;
+  }
+  h1{
+      text-align: center;
+      color: cadetblue;
+  }
+  hr{
+      width: 20%;
+  }
