--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -72,7 +72,21 @@
       width: 20%;
   }
   .l1{
-    padding-bottom: 20px;
     color: #777;
-
+  }
+  .btn{
+    background: #e84393;
+    width:50%;
+    border: none;
+    height:50px;
+    margin: 20px 10px;
+    border-radius:50px;
+    color: #fff;
+    font-weight: bold;
+  }
+  .btn:hover{
+    background: #fd79a8;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
   }
