--- a/CSS/style1.css
+++ b/CSS/style1.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
 .input{
     font-size:14px;
     background:white;
